add google maps location for module

--- a/src/index.html
+++ b/src/index.html
@@ -23,4 +23,7 @@
   <app-root></app-root>
 </body>
 
+<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzi9hyC_xSK6jo6k8tzuGTvJq4ltD6wPo"></script>
+
+
 </html>
